se corrige falta de etiqueta de cierre
</div>

--- a/Contenedores de bloque.html
+++ b/Contenedores de bloque.html
@@ -24,6 +24,8 @@ Frecuencia: (f) : Indica el número de ciclos en un segundo, su unidad de medida
 
 	<img src="https://sites.google.com/site/1demayocfgmtelecoangel/_/rsrc/1412940649574/home/telecomunicaciones/megafonia-y-sonorizacion/01-principios-basicos-de-sonido/Captura%20compuesto.PNG?height=75&width=200"><br><br><br>
 
+</div>
+
 
 
 
